Saved UVA logo image into the folder.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="mainApp">
 <head>
 	<title>Capstone</title>
-	<link href="http://grfx.cstv.com/graphics/school-logos/va-lg.png" rel="icon">
+	<link href="uva-logo.png" rel="icon">
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
