--- a/sts/sources.html
+++ b/sts/sources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="mainApp">
 <head>
-	<title>Homepage</title>
+	<title>Sources</title>
 	<link href="uva-logo.png" rel="icon">
 
 	<!-- Bootstrap -->
@@ -14,11 +14,21 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular.min.js"></script>
 
 	<!-- Custom JavaScript -->
-	<script src="main.js"></script>
+	<script src="../main.js"></script>
 </head>
 <body ng-controller="mainController">
 
+<a href="alcohol-on-creative-problem-solving.pdf" class="btn btn-link">Alcohol and Creative Problem Solving</a>
+<br>
 <a href="creativity-in-college.pdf" class="btn btn-link">Creativity in College</a>
+<br>
+<a href="jim-morrison.pdf" class="btn btn-link">Jim Morrison Case Study</a>
+<br>
+<a href="alcohol-neurotransmitters.pdf" class="btn btn-link">Alcohol and Neurotransmitter Interactions</a>
+<br>
+<a href="http://www.proxy.its.virginia.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=6606540&site=ehost-live" class="btn btn-link">Alcohol Input and Creative Output - Ludwig</a>
+
+
 <p>Presentation Guidelines: Print at least 31 copies of handout for the classe. Handout is like a summarized version of the argument outline.</p>
 			
 
