--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 	<div class="row">
 
-		<div class="col-md-4">
+		<div class="col-xs-4">
 			<div class="btn-group-vertical btn-group-lg" role="group">
 				<button type="button" class="btn btn-default" ng-repeat="course in courseList" ng-click="selectCourse($index)">{{course.title}}</button>
 			</div>
 		</div>
 
-		<div class="col-md-8">
+		<div class="col-xs-8">
 			<div class="panel panel-default">
 				<div class="panel-heading panel-title">
 					<h1><a href="{{courseList[viewedCourse].url}}">{{courseList[viewedCourse].title}}</a></h1>
