--- a/cavAd/cavAd.html
+++ b/cavAd/cavAd.html
@@ -30,7 +30,7 @@
 		<h1>You must use {{swipesPerWeek | number: 1}} swipes and ${{plusDollarsPerWeek | number: 2}} plus dollars per week.</h1>
 	</div>
 
-	<a href="https://csg-web1.eservices.virginia.edu/student/welcome.php">Check you balance</a>
+	<a href="https://csg-web1.eservices.virginia.edu/student/welcome.php" target="_blank">Check you balance</a>
 
 </body>
 </html>
