--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-	<!-- Custome CSS -->
+	<!-- Custom CSS -->
 	<link rel="stylesheet" href="main.css">
 
 	<!-- AngularJS -->
